--- a/navbar/navbar.html
+++ b/navbar/navbar.html
@@ -17,7 +17,7 @@
                 <ul class="navbar-nav">
                     <li class="nav-item">
                     <a id="nav-link" class="nav-item nav-link padding-navbar" href="#">
-                        <button class="cta" onclick="cliquei()">
+                        <button type="button" class="cta" onclick="cliquei()">
                             <span class="ideias">Ideias</span>
                             <path
                                 id="Path_10"
@@ -29,7 +29,7 @@
                     </li>
                     <li class="nav-item">
                     <a id="nav-link" class="nav-item nav-link padding-navbar" href="#">
-                        <button class="cta" onclick="cliquei()">
+                        <button type="button" class="cta" onclick="cliquei()">
                             <span class="sobreNos">Sobre Nós</span>
                             <path
                                 id="Path_10"
@@ -41,7 +41,7 @@
                     </li>
                     <li class="nav-item">
                     <a id="nav-link" class="nav-item nav-link padding-navbar" href="#">
-                        <button class="cta" onclick="cliquei()">
+                        <button type="button" class="cta" onclick="cliquei()">
                             <span class="contato">Contato</span>
                             <path
                                 id="Path_10"
@@ -53,7 +53,7 @@
                     </li>
                     <li class="nav-item">
                     <a id="nav-link" class="nav-item nav-link padding-navbar" href="#">
-                        <button class="cta" onclick="cliquei()">
+                        <button type="button" class="cta" onclick="cliquei()">
                             <span class="login">Login</span>
                             <path
                                 id="Path_10"
@@ -65,7 +65,7 @@
                     </li>
                     <li class="nav-item">
                     <a id="nav-link" class="nav-item nav-link padding-navbar" href="#">
-                        <button class="cta" onclick="cliquei()">
+                        <button type="button" class="cta" onclick="cliquei()">
                             <span class="cadastro">Cadastro</span>
                             <path
                                 id="Path_10"
