Problema de responsividade no Rodapé; Criação inicial da página de ideias; Criação da página padrão css

--- a/rodape/rodape.html
+++ b/rodape/rodape.html
@@ -15,17 +15,17 @@
             </div>
             <div class="col-5 linha"></div>
         </div>
-        <div class="row pb-5">
+        <div class="row center pb-5">
             <div class="col-sm-1"></div>
-            <div class="col-12 col-sm-3 icones">
+            <div class="col-12 col-sm-3 center icones">
                 <img src="rodape/instagram.png" alt="Logo instagram">
                 <img src="rodape/twitter.png" alt="Logo X/Twitter">
                 <img src="rodape/pinterest.png" alt="Logo pinterest">
             </div>
-            <div class="col-sm-4"></div>
-            <div class="col-12 pt-4 py-sm-0 col-sm-3 icones">
-                <img class="mobile" src="rodape/googlePlay.png" alt="Botão 'Disponível no Google Play'">
-                <img class="mobile" src="rodape/appStore.png" alt="Botão 'Disponível na AppStore'">
+            <div class="col-sm-2 col-md-4"></div>
+            <div class="col-12 pt-4 py-sm-0 col-sm-3 center icones">
+                <img class="mobile img-fluid" src="rodape/googlePlay.png" alt="Botão 'Disponível no Google Play'">
+                <img class="mobile img-fluid" src="rodape/appStore.png" alt="Botão 'Disponível na AppStore'">
             </div>
             <div class="col-sm-1"></div>
         </div>
