Início da tela 'minha conta' -> pendências: centralização das ideias; dados do usuário com erros no carregamento

--- a/rodape/rodape.html
+++ b/rodape/rodape.html
@@ -36,11 +36,11 @@
 <body>
     <div class="container-fluid menu">
         <div class="row py-5">
-            <div class="col-5 linha"></div>
-            <div class="col-2 logoCamp justify-content-center">
+            <div class="col-2 col-sm-3 col-md-4 col-lg-5"><div class="row linha m-md-2"><br></div><div class="row"><br></div></div>
+            <div class="col-8 col-sm-6 col-md-4 col-lg-2 logoCamp justify-content-center">
                 <img class="logo pb-2" src="rodape/EcoMoment - logo rodape.png" alt="Logo do EcoMoment">
             </div>
-            <div class="col-5 linha"></div>
+            <div class="col-2 col-sm-3 col-md-4 col-lg-5"><div class="row linha m-md-2"><br></div><div class="row"><br></div></div>
         </div>
         <div class="row center pb-5">
             <div class="col-12 col-sm-4 icones">
