--- a/navbar/navbar.html
+++ b/navbar/navbar.html
@@ -9,14 +9,14 @@
 <body>
     <nav class="navbar navbar-expand-md fixed-top navbar-light">
         <div class="container-fluid navBar">
-            <span class="navbar-brand"><img src="navbar/logo.ico" alt="Logo EcoMoment" class="navbarIcon"></span>
+            <a href="index.html"><span class="navbar-brand"><img src="navbar/logo.ico" alt="Logo EcoMoment" class="navbarIcon"></span></a>
             <button class="navbar-toggler d-md-none rounded" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation" >
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNavDropdown">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                    <a id="nav-link" class="nav-item nav-link padding-navbar" href="#">
+                    <a id="nav-link" class="nav-item nav-link padding-navbar" href="paginaDeIdeias.php">
                         <button type="button" class="cta" onclick="cliquei()">
                             <span class="ideias">Ideias</span>
                             <path
@@ -28,9 +28,9 @@
                     </a>
                     </li>
                     <li class="nav-item">
-                    <a id="nav-link" class="nav-item nav-link padding-navbar" href="#">
+                    <a id="nav-link" class="nav-item nav-link padding-navbar" href="indexSobre.php">
                         <button type="button" class="cta" onclick="cliquei()">
-                            <span class="sobreNos">Sobre Nós</span>
+                            <span class="sobreNos">Sobre nós</span>
                             <path
                                 id="Path_10"
                                 data-name="Path 10"
@@ -40,7 +40,7 @@
                     </a>
                     </li>
                     <li class="nav-item">
-                    <a id="nav-link" class="nav-item nav-link padding-navbar" href="#">
+                    <a id="nav-link" class="nav-item nav-link padding-navbar" href="index.html#footer">
                         <button type="button" class="cta" onclick="cliquei()">
                             <span class="contato">Contato</span>
                             <path
@@ -52,7 +52,7 @@
                     </a>
                     </li>
                     <li class="nav-item">
-                    <a id="nav-link" class="nav-item nav-link padding-navbar" href="#">
+                    <a id="nav-link" class="nav-item nav-link padding-navbar" href="loginPage.php">
                         <button type="button" class="cta" onclick="cliquei()">
                             <span class="login">Login</span>
                             <path
@@ -64,7 +64,7 @@
                     </a>
                     </li>
                     <li class="nav-item">
-                    <a id="nav-link" class="nav-item nav-link padding-navbar" href="#">
+                    <a id="nav-link" class="nav-item nav-link padding-navbar" href="cadastro.php">
                         <button type="button" class="cta" onclick="cliquei()">
                             <span class="cadastro">Cadastro</span>
                             <path
